--- a/project_posts/2014-02-08-Post-1.md
+++ b/project_posts/2014-02-08-Post-1.md
@@ -2,7 +2,7 @@ Face Recognition and the Face Field
 
 It might be worth tracing the road we have followed to get to our current set of questions. As follows:   
 
-The terms Face Detectoin and Face Recognition are often used interchangeably but to be precise, Face Detection picks out faces from an image, whereas Face Recognition takes a new image of a face and matches it with one it has previously seen. Our research has focuses on Face Recognition, in particular the Eigen Faces methodology as implemented in OpenCV.   
+The terms Face Detectoin and Face Recognition are often used interchangeably but to be precise, Face Detection picks out faces from an image, whereas Face Recognition takes a new image of a face and matches it with one it has previously seen. Our research focuses on Face Recognition, in particular the Eigen Faces methodology as implemented in OpenCV.   
 
 Eigenfaces analysis is a statistical face recognition technique. It uses Principal Component Analysis to calculate a set of Eigenvectors, or Eigenfaces. These Eigenfaces can be thought of as 'face ingredients'. To calibrate the model, we calculated 60 Eigenfaces on a training set of over one thousand faces. Thereafter, whenever a new face is uploaded, it is subjected to a subspace projection that reconstitutes it as a linear combination of these Eigenfaces. Normally at this point, a face recognition algorithm would look for the closest match in this 60-dimensional Eigenface space. We are not interested in surveillance technologies but in exploring this 60-dimensional field of faces images.   
 
@@ -12,13 +12,35 @@ Our training engine was written in C# and C++. We modified the OpenCV code to al
 Mat Eigenfaces::reconstructFromCoordinates(InputArray coordinates) const {   
     Mat projection = coordinates.getMat();   
     // slice the eigenvectors from the model   
-    Mat evs = Mat(_eigenvectors, Range::all(), Range(0, _num_components));   
+    Mat evs = Mat(_eigenvectors, Range::all(), Range(0, _num_components));  
+    // do a subspace projection of the given coords, this will create our face. 
     Mat reconstruction = subspaceReconstruct(evs, _mean, projection);   
     return reconstruction.reshape(1,_faceRows);   
 }   
 
 ```
 
-![Example Image](../project_images/cover.jpg?raw=true "Example Image")
+Initially we explored the notion of a face continuum. How unique is our face? We asked the algorithm to do a sort:
 
-https://www.youtube.com/watch?v=30yGOxJJ2PQ
+![Spectrum 1](../project_images/spectrum1.jpg?raw=true)
+
+![Spectrum 2](../project_images/Spectrum2.jpg?raw=true)
+
+From the face continuum emerged the notion of the Anti-Face. The Anti Face program is face recognition turned upside-down. After looking at your image, it creates a face as different from yours as possible. It might change your gender, your age, your expression. 
+
+Stated mathematically:
+![Math](../project_images/math.jpg?raw=true)
+
+So prominent features in the reconstructed faces (with high weighting, meaning far from the mean) would be equally prominent, though opposite, in the anti-face.
+![Example](../project_images/gandhi.jpg?raw=true)
+
+We broadened the experiment by developing an iPhone App to allow everyone to view their anti-face. Here are some anti-faces:
+
+![antiface1](../project_images/MrsX.jpg?raw=true)
+
+![antiface2](../project_images/MrX.jpg?raw=true)
+
+![antiface3](../project_images/MrsY.jpg?raw=true)
+
+A visit to the Art Institute of Chicago yielded beautiful contrasts:
+
