--- a/project_posts/2014-02-08-Post-1.md
+++ b/project_posts/2014-02-08-Post-1.md
@@ -29,18 +29,18 @@ Initially we explored the notion of a face continuum. How unique is our face? We
 From the face continuum emerged the notion of the Anti-Face. The Anti Face program is face recognition turned upside-down. After looking at your image, it creates a face as different from yours as possible. It might change your gender, your age, your expression. 
 
 Stated mathematically:
-![Math](../project_images/math.jpg?raw=true)
+![Math](../project_images/math.png?raw=true)
 
 So prominent features in the reconstructed faces (with high weighting, meaning far from the mean) would be equally prominent, though opposite, in the anti-face.
-![Example](../project_images/gandhi.jpg?raw=true)
+![Example](../project_images/gandhi.png?raw=true)
 
 We broadened the experiment by developing an iPhone App to allow everyone to view their anti-face. Here are some anti-faces:
 
-![antiface1](../project_images/MrsX.jpg?raw=true)
+![antiface1](../project_images/MrsX.png?raw=true)
 
-![antiface2](../project_images/MrX.jpg?raw=true)
+![antiface2](../project_images/MrX.png?raw=true)
 
-![antiface3](../project_images/MrsY.jpg?raw=true)
+![antiface3](../project_images/MrsY.png?raw=true)
 
 A visit to the Art Institute of Chicago yielded beautiful contrasts:
 
