adding gothic.png

--- a/project_posts/2014-02-08-Post-1.md
+++ b/project_posts/2014-02-08-Post-1.md
@@ -2,7 +2,7 @@ Face Recognition and the Face Field
 
 It might be worth tracing the road we have followed to get to our current set of questions. As follows:   
 
-The terms Face Detectoin and Face Recognition are often used interchangeably but to be precise, Face Detection picks out faces from an image, whereas Face Recognition takes a new image of a face and matches it with one it has previously seen. Our research focuses on Face Recognition, in particular the Eigen Faces methodology as implemented in OpenCV.   
+The terms Face Detection and Face Recognition are often used interchangeably but to be precise, Face Detection picks out faces from an image, whereas Face Recognition takes a new image of a face and matches it with one it has previously seen. Our research focuses on Face Recognition, in particular the Eigen Faces methodology as implemented in OpenCV.   
 
 Eigenfaces analysis is a statistical face recognition technique. It uses Principal Component Analysis to calculate a set of Eigenvectors, or Eigenfaces. These Eigenfaces can be thought of as 'face ingredients'. To calibrate the model, we calculated 60 Eigenfaces on a training set of over one thousand faces. Thereafter, whenever a new face is uploaded, it is subjected to a subspace projection that reconstitutes it as a linear combination of these Eigenfaces. Normally at this point, a face recognition algorithm would look for the closest match in this 60-dimensional Eigenface space. We are not interested in surveillance technologies but in exploring this 60-dimensional field of faces images.   
 
@@ -34,13 +34,16 @@ Stated mathematically:
 So prominent features in the reconstructed faces (with high weighting, meaning far from the mean) would be equally prominent, though opposite, in the anti-face.
 ![Example](../project_images/gandhi.png?raw=true)
 
-We broadened the experiment by developing an iPhone App to allow everyone to view their anti-face. Here are some anti-faces:
+We broadened the experiment by developing an iPhone App to allow everyone to view their anti-face. Here are some faces with their anti-faces:
 
 ![antiface1](../project_images/MrsX.png?raw=true)
 
-![antiface2](../project_images/MrX.png?raw=true)
+![antiface2](../project_images/bread.png?raw=true)
 
 ![antiface3](../project_images/MrsY.png?raw=true)
 
 A visit to the Art Institute of Chicago yielded beautiful contrasts:
 
+![antiface4](../project_images/RedRidingHood.png?raw=true)
+
+![antiface5](../project_images/gothic.png?raw=true)
