--- a/project_posts/2014-02-08-Post-1.md
+++ b/project_posts/2014-02-08-Post-1.md
@@ -29,7 +29,7 @@ Initially we explored the notion of a face continuum. How unique is our face? We
 From the face continuum emerged the notion of the Anti-Face. The Anti Face program is face recognition turned upside-down. After looking at your image, it creates a face as different from yours as possible. It might change your gender, your age, your expression. 
 
 Stated mathematically:
-![Math](../project_images/math.png?raw=true)
+<img src="../project_images/math.png" style="width: 300px;"/>
 
 So prominent features in the reconstructed faces (with high weighting, meaning far from the mean) would be equally prominent, though opposite, in the anti-face.
 ![Example](../project_images/gandhi.png?raw=true)
