--- a/project_posts/2014-02-08-Post-1.md
+++ b/project_posts/2014-02-08-Post-1.md
@@ -22,25 +22,26 @@ Mat Eigenfaces::reconstructFromCoordinates(InputArray coordinates) const {
 
 Initially we explored the notion of a face continuum. How unique is our face? We asked the algorithm to do a sort:
 
-![Spectrum 1](../project_images/spectrum1.jpg?raw=true)
+![Spectrum 1](../project_images/spectrum1.png?raw=true)
 
-![Spectrum 2](../project_images/Spectrum2.jpg?raw=true)
+![Spectrum 2](../project_images/Spectrum2.png?raw=true)
 
 From the face continuum emerged the notion of the Anti-Face. The Anti Face program is face recognition turned upside-down. After looking at your image, it creates a face as different from yours as possible. It might change your gender, your age, your expression. 
 
 Stated mathematically:
-<img src="../project_images/math.png" style="width: 300px;"/>
+<img src="../project_images/math.png" style="width: 200px;"/>
 
 So prominent features in the reconstructed faces (with high weighting, meaning far from the mean) would be equally prominent, though opposite, in the anti-face.
 ![Example](../project_images/gandhi.png?raw=true)
 
 We broadened the experiment by developing an iPhone App to allow everyone to view their anti-face. Here are some faces with their anti-faces:
 
-![antiface1](../project_images/MrsX.png?raw=true)
+<img src="../project_images/MrsX.png" style="width: 400px;"/>
 
-![antiface2](../project_images/bread.png?raw=true)
+<img src="../project_images/bread.png" style="width: 400px;"/>
 
-![antiface3](../project_images/MrsY.png?raw=true)
+<img src="../project_images/MrsY.png" style="width: 400px;"/>
+
 
 A visit to the Art Institute of Chicago yielded beautiful contrasts:
 
