adding math2.png

--- a/project_posts/2014-02-08-Post-1.md
+++ b/project_posts/2014-02-08-Post-1.md
@@ -30,7 +30,7 @@ From the face continuum emerged the notion of the Anti-Face. The Anti Face progr
 
 Stated mathematically:   
 
-<img src="../project_images/math.png" style="width: 400px;"/>
+![math](../project_images/math2.png?raw=true)
 
 So prominent features in the reconstructed faces (with high weighting, meaning far from the mean) would be equally prominent, though opposite, in the anti-face.
 ![Example](../project_images/gandhi.png?raw=true)
@@ -49,3 +49,8 @@ A visit to the Art Institute of Chicago yielded beautiful contrasts:
 ![antiface4](../project_images/RedRidingHood.png?raw=true)
 
 ![antiface5](../project_images/gothic.png?raw=true)
+
+Our system architecture looks like this:
+![architecture](../project_images/arch.jps?raw=true)
+
+
