--- a/project_posts/2014-02-08-Post-1.md
+++ b/project_posts/2014-02-08-Post-1.md
@@ -51,5 +51,5 @@ A visit to the Art Institute of Chicago yielded beautiful contrasts:
 ![antiface5](../project_images/gothic.png?raw=true)
 
 Our system architecture looks like this:
-![architecture](../project_images/arch.jps?raw=true)
+![architecture](../project_images/arch.jpg?raw=true)
 
