Moved text around to read more clearly.

--- a/project_posts/2014-02-08-Post-1.md
+++ b/project_posts/2014-02-08-Post-1.md
@@ -4,21 +4,6 @@ The terms Face Detection and Face Recognition are often used interchangeably but
 
 Eigenfaces analysis is a statistical face recognition technique. It uses Principal Component Analysis to calculate a set of Eigenvectors, or Eigenfaces. These Eigenfaces can be thought of as 'face ingredients'. To calibrate the model, we calculated 60 Eigenfaces on a training set of over one thousand faces. Thereafter, whenever a new face is uploaded, it is subjected to a subspace projection that reconstitutes it as a linear combination of these Eigenfaces. Normally at this point, a face recognition algorithm would look for the closest match in this 60-dimensional Eigenface space. We are not interested in surveillance technologies but in exploring this 60-dimensional field of faces images.   
 
-Our training engine was written in C# and C++. We modified the OpenCV code to allow us to extract the raw subspace coordinates and store them in a database. We also wrote a routine to reconstitute a face from the coordinates:   
-
-```
-Mat Eigenfaces::reconstructFromCoordinates(InputArray coordinates) const {   
-    Mat projection = coordinates.getMat();   
-    // slice the eigenvectors from the model   
-    Mat evs = Mat(_eigenvectors, Range::all(), Range(0, _num_components));  
-    // do a subspace projection of the given coords, this will create our face. 
-    Mat reconstruction = subspaceReconstruct(evs, _mean, projection);   
-    return reconstruction.reshape(1,_faceRows);   
-}   
-
-```
-This face reconstitution ability was initially just for debugging, but later turned out to be quite interesting in its own right (as we will discuss in future posts).
-
 Initially we explored the notion of a face continuum. How unique is one's own face? We asked the algorithm to do a sort:
 
 ![Spectrum 1](../project_images/spectrum1.png?raw=true)
@@ -32,6 +17,23 @@ Stated mathematically:
 ![math](../project_images/math2.png?raw=true)
 
 So prominent features in the reconstructed faces (with high weighting, meaning far from the mean) would be equally prominent, though opposite, in the anti-face.
+
+We already had modified the OpenCV code to allow us to extract the raw subspace coordinates and store them in a database. We now wrote a routine to reconstitute a face from the coordinates:   
+
+```
+Mat Eigenfaces::reconstructFromCoordinates(InputArray coordinates) const {   
+    Mat projection = coordinates.getMat();   
+    // slice the eigenvectors from the model   
+    Mat evs = Mat(_eigenvectors, Range::all(), Range(0, _num_components));  
+    // do a subspace projection of the given coords, this will create our face. 
+    Mat reconstruction = subspaceReconstruct(evs, _mean, projection);   
+    return reconstruction.reshape(1,_faceRows);   
+}   
+
+```
+We could use the same routine to calculate the anti-face by simply flipping the signs on all the coordinates.
+
+
 ![Example](../project_images/gandhi.png?raw=true)
 
 We broadened the experiment by developing a free <a href="https://itunes.apple.com/us/app/anti-face/id690376775">iPhone App</a> to allow everyone to view their anti-face. Here are some faces with their anti-faces:
@@ -51,4 +53,3 @@ A visit to the Art Institute of Chicago yielded beautiful contrasts:
 
 Our system architecture looks like this:
 ![architecture](../project_images/arch.jpg?raw=true)
-
