--- a/project_posts/2014-02-10-Post-2.md
+++ b/project_posts/2014-02-10-Post-2.md
@@ -1,5 +1,3 @@
-This is a draft....
-
 
 Process   
 
@@ -23,7 +21,7 @@ To think through ideas and constraints, we used a scheme one of us has developed
 
 ![p1](../project_images/adelheidNotes.jpg?raw=true)
 
-The diagram that result is show immediately below. It indicates three high level concerns: Input (what we have and know how to do), Output (how we may show results), Ecologies (what are the contexts).   
+The diagram that resulted is shown immediately below. It indicates three high level concerns: Input (what we have and know how to do), Output (how we may show results), Ecologies (what are the contexts).   
 ![p1](../project_images/croppedSmall.jpg?raw=true)
 
 Zooming in on the smaller matrices, one-by-one:
