--- a/project_posts/2014-02-16-Post-3.md
+++ b/project_posts/2014-02-16-Post-3.md
@@ -3,9 +3,9 @@ How this might work:
 
 2. We then project it into the Face Cloud, using the code listed in our first post. We call this the 'Reconstructed Face' because the visitor's face has been reconstructed from our 60 Eigen Faces.   
 
-3. Now we want to create the 'dï¿½rive of morphologies' that we mentioned in our project summary.   
+3. Now we want to create the 'dérive of morphologies' that we mentioned in our project summary.   
 
-How to create the dï¿½rive:   
+How to create the dérive:   
 
 Our reconstructed face is represented as 60 numbers. These are coordinates in 60-dimensional face space: the Face Cloud.   
 
@@ -19,7 +19,7 @@ Attempt 2: For each face, just change one coordinate at a time. Avoid adding so 
 
 ![attempt 2](../project_images/2014-02-16/2-OneCoordAtATime.png?raw=true)
 
-Not bad. We do indeed have a smooth dï¿½rive from the starting face to an ending face. But this is not a random walk. We'll get the same ending face no matter how often we run it. Plus the algorithm is kind of clunky. A more aesthically pleasing algorithm is called for. Surely we can do better.   
+Not bad. We do indeed have a smooth dérive from the starting face to an ending face. But this is not a random walk. We'll get the same ending face no matter how often we run it. Plus the algorithm is kind of clunky. A more aesthically pleasing algorithm is called for. Surely we can do better.   
 
 Attempt 3: Generate a random face, precisely X units from the starting face. Then create a path from our original face to this new face, sampling for a new face periodically.    
 
@@ -27,7 +27,7 @@ Attempt 3: Generate a random face, precisely X units from the starting face. The
 
 ![attempt 3](../project_images/2014-02-16/3-RandomVector.png?raw=true)
 
-We're getting closer. Each row is a separate run of the algorithm, generating a new random dï¿½rive with our starting face in the middle.    
+We're getting closer. Each row is a separate run of the algorithm, generating a new random dérive with our starting face in the middle.    
 
 However the effect is one of face morphing which is not very interesting. We want a set of faces that one might pick from a crowd and line up in similarity.
 
