--- a/project_posts/2014-02-16-Post-3.md
+++ b/project_posts/2014-02-16-Post-3.md
@@ -31,7 +31,7 @@ We're getting closer. Each row is a separate run of the algorithm, generating a 
 
 However the effect is one of face morphing which is not very interesting. We want a set of faces that one might pick from a crowd and line up in similarity.
 
-Attempt 4: Same as Attempt 3, but add some random noise around our coordinates to avoid the morphing effect. It took several attempts to determine the right amount of noise. Here we run the algo 3 separate times:   
+Attempt 4: Same as Attempt 3, but add some random noise around our coordinates to avoid the morphing effect. It took several attempts to determine the right amount of noise. Here we run the algo 3 separate times, each row is a separate run:   
 
 ![attempt 4](../project_images/2014-02-16/4-NiceNoise.png?raw=true)
 
