--- a/project_posts/2014-02-16-Post-3.md
+++ b/project_posts/2014-02-16-Post-3.md
@@ -3,7 +3,10 @@ How this might work:
 2. We then project it into the Face Cloud, using the code listed in our first post. We call this the 'Reconstructed Face' because the visitor's face has been reconstructed from our 60 Eigen Faces.   
 3. Now we want to create the 'dérive of morphologies' that we mentioned in our project summary.   
 
-How to create the dérive:   
+***So how to create the dérive?***   
+
+Lets start with this reconstructured face:   
+![r](../project_images/2014-02-16/reconstructedFace.png?raw=true)
 
 Our reconstructed face is represented as 60 numbers. These are coordinates in 60-dimensional face space: the Face Cloud.   
 
