--- a/project_posts/2014-02-16-Post-3.md
+++ b/project_posts/2014-02-16-Post-3.md
@@ -1,9 +1,9 @@
-How this might work:   
-1. The visitor to the gallery stops in front of a camera. His face is detected and uploaded.   
-2. We then project it into the Face Cloud, using the code listed in our first post. We call this the 'Reconstructed Face' because the visitor's face has been reconstructed from our 60 Eigen Faces.   
+Here is a first stab at an installation concept:      
+1. The visitor to the gallery stops in front of a camera. The visitor's face is detected and uploaded.   
+2. We then transport it into the Face Cloud, using the code listed in our first post. We call this the 'Reconstructed Face' because the visitor's face is reconstructed from the 60 Eigen Faces we use.   
 3. Now we want to create the 'dérive of morphologies' that we mentioned in our project summary.   
 
-***So how to create the dérive?***   
+***So how to create the morphologies?***   
 
 Lets start with this reconstructured face:   
 ![r](../project_images/2014-02-16/reconstructedFace.png?raw=true)
@@ -14,23 +14,23 @@ Our reconstructed face is represented as 60 numbers. These are coordinates in 60
 
 ![attempt 1](../project_images/2014-02-16/1-OutIntoSpace.png?raw=true)
 
-It appears we added too much and left the face cloud entirely! We are out in a part of space with little additional information. Yes, the face cloud  does indeed have an end. Its boundaries are defined by the several thousand faces that were fitted in the initial estmation.   
+It appears we added too much and left the face cloud entirely! We are out in a part of space with little additional information. Yes, the face cloud does indeed have an end. Its boundaries are defined by the several thousand faces that were used for fitting the initial model estimation.   
 
 **Attempt 2**: For each face, just change one coordinate at a time. Avoid adding so much that we leave the cloud as in Attempt 1.    
 
 ![attempt 2](../project_images/2014-02-16/2-OneCoordAtATime.png?raw=true)
 
-Not bad. We do indeed have a smooth dérive from the starting face to an ending face. But this is not a random walk. We'll get the same ending face no matter how often we run it. Plus the algorithm is kind of clunky. A more aesthically pleasing algorithm is called for. Surely we can do better.   
+Not bad. We do indeed have a smooth transition from the starting face to an ending face. But this is not a random walk. We'll get the same ending face no matter how often we run it. Plus the algorithm is kind of clunky. A more aesthically pleasing algorithm is called for. Surely we can do better.   
 
 **Attempt 3**: Generate a random face, precisely X units from the starting face. Then create a path from our original face to this new face, sampling for a new face periodically.    
 
-(This problem of generating a face X units from the start turns out to be an interesting math problem having to do with hyperspheres. More [here](http://stackoverflow.com/questions/6283080/random-unit-vector-in-multi-dimensional-space "Stack Overflow article") if you're interested.)   
+(This problem of generating a face X units from the start turns out to be an interesting math problem having to do with hyperspheres. More [here](http://stackoverflow.com/questions/6283080/random-unit-vector-in-multi-dimensional-space "Stack Overflow article").)   
 
 ![attempt 3](../project_images/2014-02-16/3-RandomVector.png?raw=true)
 
 We're getting closer. Each row is a separate run of the algorithm, generating a new random dérive with our starting face in the middle.    
 
-However the effect is one of face morphing which is not very interesting. We want a set of faces that one might pick from a crowd and line up in similarity.
+However the effect is one of face morphing which is not very interesting. We want a set of faces that one might pick from a crowd and lined up by similarity.   
 
 **Attempt 4**: Same as Attempt 3, but add some random noise around our coordinates to avoid the morphing effect. It took several attempts to determine the right amount of noise. Here we run the algo 3 separate times, each row is a separate run:   
 
