--- a/project_posts/2014-02-16-Post-3.md
+++ b/project_posts/2014-02-16-Post-3.md
@@ -36,6 +36,9 @@ However the effect is one of face morphing which is not very interesting. We wan
 
 ![attempt 4](../project_images/2014-02-16/4-NiceNoise.png?raw=true)
 
-**Installation Sketch**
+   
+   
+   
+**Installation Sketch:**
 
 ![is](../project_images/2014-02-16/inst_sketch1.png?raw=true)
