added animated gif

--- a/project_posts/2014-02-23-Post-4.md
+++ b/project_posts/2014-02-23-Post-4.md
@@ -8,3 +8,5 @@ Try it out!
 
 ![synth face](../project_images/2014-02-23/synthFace.png?raw=true)
 
+Animated Gif that shows some of the features (albeit in reduced resolution):
+![synth face](../project_images/2014-02-23/t31.gif?raw=true)
