--- a/project_posts/2014-03-02-Post-5.md
+++ b/project_posts/2014-03-02-Post-5.md
@@ -1,7 +1,7 @@
 The 'Curse of Dimensionality' refers to various phenomena that arise when analyzing and organizing data in high-dimensional spaces. (Wikipedia) Visualizing higher dimensional spaces is a problem that recurs frequently in scientific and mathematic didactic settings and our explorations here with the Face Cloud have wider application in those domains.
 
 It often seems easiest to start with the average face:
-![Average face](../project_images/2014-03-02/average.png?raw=true)
+![Average face](../project_images/2014-03-02/average.jpg?raw=true)
 
 Note how all the coordinates are 0. This face resides exactly in the middle of the face cloud.   
 
