--- a/project_posts/2014-03-02-Post-5.md
+++ b/project_posts/2014-03-02-Post-5.md
@@ -22,4 +22,7 @@ To cut to the chase, our current, best representation manages to encode 12 dimen
 A video of same:
 http://youtu.be/FbIPlAersUo
 
-We're using three.js/WebGl for this....
+Some outstanding issues:   
+1. This is served in a browser using Three.js and WebGL, but is quite resource intensive.    
+2. We need a way to navigate the space, for now we just have it spin.   
+
