update post 5 text

--- a/project_posts/2014-03-02-Post-5.md
+++ b/project_posts/2014-03-02-Post-5.md
@@ -14,9 +14,13 @@ What if we move the top slider to the right? Try it yourself here: [Average Face
 So the first dimension is represented as a line. The second dimension would be a plane, normally. If we move the 2nd slider back and forth we experience side lighting effects.
 ![Plane](../project_images/2014-03-02/cross.png?raw=true)
 
-So we've filled the screen and we've only used 2 of our 60 dimensions. We need to do better.
+In this picture, Adam and Eve are to the right and left of the Average face. Left-lit and Right-lit faces are below and above. Then we further subdivide the space using smaller faces.
 
-To cut to the chase, our current, best representation manages to encode 12 dimensions of data before the GPU maxes out and our laptop heats to 220 degrees:
+So we've filled the screen and we've only used 2 of our 60 dimensions. We need to do better. Of course we have a third dimension available as well. 
+
+So to cut to the chase, We chose to work with the smaller fractal faces introduced into the picture above to push into higher dimensions.
+
+This is getting complex and it seems like some sort of data-graphic needs to be introduced to grasp the visualization. Our current, best representation manages to encode 12 dimensions of data into 320 faces (below). With panning and zooming as well as roation, we are able to explore this space. It is not clear how we would push further as the higher dimensional faces are becoming quite small, and the GPU on the laptop is maxing out at a temperature well above 220 degrees.
 ![Sky](../project_images/2014-03-02/Sky.jpg?raw=true)
 
 A video of same:
