--- a/project_posts/2014-03-02-Post-5.md
+++ b/project_posts/2014-03-02-Post-5.md
@@ -20,7 +20,7 @@ So we've filled the screen and we've only used 2 of our 60 dimensions. We need t
 
 So to cut to the chase, We chose to work with the smaller fractal faces introduced into the picture above to push into higher dimensions.
 
-This is getting complex and it seems like some sort of data-graphic needs to be introduced to grasp the visualization. Our current, best representation manages to encode 12 dimensions of data into 320 faces (below). With panning and zooming as well as roation, we are able to explore this space. It is not clear how we would push further as the higher dimensional faces are becoming quite small, and the GPU on the laptop is maxing out at a temperature well above 220 degrees.
+This is getting complex and it seems like some sort of data-graphic needs to be introduced to grasp the visualization. Our current, best representation manages to encode 12 dimensions of data into 320 faces (below). With panning and zooming as well as roation, we are able to explore this space. It is not clear how we would push further as the higher dimensional faces are becoming quite small, and the GPU on the laptop is maxing out at a temperature well above 220 degrees!
 ![Sky](../project_images/2014-03-02/Sky.jpg?raw=true)
 
 A video of same:
@@ -28,5 +28,6 @@ http://youtu.be/FbIPlAersUo
 
 Some outstanding issues:   
 1. This is served in a browser using Three.js and WebGL, but is quite resource intensive.    
-2. We need a way to navigate the space, for now we just have it spin.   
+2. We need good ways to navigate the space, for now we just have it spin with panning and zooming.   
+3. A diagram might help.   
 
